feat: Implemented end-to-end car valuation check from input file with full data validation
- Added Page Object classes for HomePage and CarDetailsReportPage
- Implemented reading vehicle registration numbers from input file
- Added logic to extract expected vehicle details from output file
- Implemented vehicle search flow and detail comparison
- Enhanced logging using custom Log utility
- Added teardown logic to ensure driver cleanup after each test
- Refactored step definitions for better reusability and maintainability
- Updated feature file to cover multi-car checks

This completes the core functionality for automated vehicle valuation check.